2002-04-21  Christian Ruppert <arc@gmx.li>
	* uwm/menu.c: fixed a typo-bug by replacing backing_store=True by
	  backing_store=WhenMapped
	* uwm/uwm.c, uwm/init.c: moved sigchld installation from init.c to
	  uwm.c where it belongs and works properly.

2002-04-21  Christian Ruppert <arc@gmx.li>
	* config/urdb, config/uwmrc*: applied Stephan Helma's (Debian) patches.

2002-03-05  Christian Ruppert <arc@gmx.li>
	* doc/manual.tex: added documentation for SubMenuTitles option.
	* AUTHORS: added Brian Roberts and corrected obsolete www adress

2002-03-04  Brian Roberts <flicken@wpi.edu>
	* config/uwmrc-behaviour.hook: added SubMenuTitles configuration
	  option.
	* lib/ude-desktop.h: added UDESubMenuTitles user preference flag
	* uwm/init.c: handler for SubMenuTitles option
	* uwm/menu.c: when menu title is NULL, don't print space for title.
	* uwm/uwmmenu.c, 
	  uwm/windows.c,
	  uwm/winmenumenu.c: changed to set submenu title to "" if user
			     preference is no SubMenuTitles. 

2002-02-11  Christian Ruppert <arc@gmx.li>

	* RELEASE: ude-0.2.8
	* NEWS: updated for release 0.2.8
	* README: rewritten for release 0.2.8
	* uwm/uwmmenu.c: uwm will no longer segfault now in case it could
	  not restart itself (no SeeYa after CleanUp...).
	* config/Makefile.am: removed StartScript and StopScript from DATA
	  variable so that x flag is set.
	* config/uwmrc-behaviour.hook: removed tick to avoid preprocessor
	  warning parsing the file.
	* configure.in: changed version number to 2.8 and added
	  config/StartScript to output file list.
	* doc/Makefile.am: added the README file to installed documentation.
	* autogen.sh: added link creation for README file to doc directory.
	* config/StartScript moved to config/StartScript.in: now using autoconf
	  macro for less to find installed README file.
	* uwm/init.c: uwm now sets UDEdir environment on system installation
	  directory on startup if UDEdir has not yet been set.

2002-02-10  Christian Ruppert <arc@gmx.li>
