@@ -30,9 +30,14 @@ dnl ******* LIB ********
 dnl Must check X11-paths first...
 AC_PATH_XTRA
 
+AC_ARG_ENABLE(backingstore,
+AC_HELP_STRING(--disable-backingstore,Disable the use of your X-servers backing store feature. XFree4's backing store still seems to be buggy and so use this option in case you have refresh problems with menus under XFree4. With this option it won't be perfect but a lot better.),
+if test "$enableval" != "yes" ; then AC_DEFINE(DISABLE_BACKING_STORE) fi)
+
 dnl Checks for libraries.
 AM_GNU_GETTEXT
-AC_ARG_WITH(libjpeg,    --without-libjpeg       disable jpeg background images support,
+AC_ARG_WITH(libjpeg,
+AC_HELP_STRING(--without-libjpeg,disable jpeg background images support),
 if test "$withval" = "yes" ; then AC_CHECK_LIB(jpeg, main) fi 
 ,AC_CHECK_LIB(jpeg, main))
 AC_CHECK_LIB(ICE, main,,,$X_CFLAGS $X_PRE_LIBS $X_EXTRA_LIBS $X_LIBS)
